--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<script>
 		var oAuthMethods = {};
 	</script>
-	<script src="masonry.pkgd.js"></script>
-	<script src="https://unpkg.com/infinite-scroll@3/dist/infinite-scroll.pkgd.min.js"></script>
+	<script src="masonry.pkgd.min.js"></script>
+	<script src="infinite-scroll.pkgd.min.js"></script>
 	<script src="sites/fivehundredpx.js"></script>
 	<script src="sites/giphy.js"></script>
 	<script src="sites/imgur.js"></script>
@@ -97,7 +97,6 @@
 </html>
 
 <!-- 
-add scroll for sticky left nav when content is too tall
 add img, vid, gif buttons (icon + text) in button bar for types of results
 add social media icons for sources
 on xs
