--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	</section>
 	<section class="main">
 		<div class="section-wrapper">
-			<div class="grid">
+			<div class="grid container">
 				<div class="grid-sizer"></div>
 				<div class="gutter-sizer"></div>
 			</div>
