--- a/index.html
+++ b/index.html
@@ -103,15 +103,20 @@ on xs
 	.sidebar becomes sticky top nav?
 	OR no sticky top nav, but add button to shoot back to top?
 	fix that .main scrolls on top of .sidebar
-hook up text input and checkboxes with submit button to render results instead of /load-puppies
+	scale browser makes results disappear and never comes back
 fix facebook account for pinterest
+
+
+hook up text input and checkboxes with submit button to render results instead of /load-puppies
+make sure search query clears and reloads when type in a new term
 get pinterest working
-add flickr? add facebook?
 authentication doesnt work on iphone/github
 make sure all have limits and loops and error handling
 more results button in results container or infinite scroll
 add infinite scroll for additional results
 add ability to search by type of result
+
+add flickr? add facebook?
 add functionality to share result to
 	Facebook
 	Instagram
