--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ fix facebook account for pinterest
 hook up text input and checkboxes with submit button to render results instead of /load-puppies
 make sure search query clears and reloads when type in a new term
 get pinterest working
+get 500px working again
 authentication doesnt work on iphone/github
 make sure all have limits and loops and error handling
 more results button in results container or infinite scroll
