--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script src="sites/giphy.js"></script>
 	<script src="sites/imgur.js"></script>
 	<script src="sites/instagram.js"></script>
-	<script src="sites/pinterest.js"></script>
+	<!-- <script src="sites/pinterest.js"></script> -->
 	<script src="sites/tumblr.js"></script>
 	<script src="sites/youtube.js"></script>
 </head>
@@ -63,10 +63,12 @@
 						<input type="checkbox" name="instagram" id="instagram" title="instagram" />
 						<label for="instagram">Instagram</label>
 					</div>
+					<!-- 
 					<div>
 						<input type="checkbox" name="pinterest" id="pinterest" title="pinterest" />
 						<label for="pinterest">Pinterest</label>
 					</div>
+					-->
 					<div>
 						<input type="checkbox" name="tumblr" id="tumblr" title="tumblr" />
 						<label for="tumblr">Tumblr</label>
@@ -97,6 +99,7 @@
 </html>
 
 <!-- 
+loading message?
 add img, vid, gif buttons (icon + text) in button bar for types of results
 add social media icons for sources
 on xs
@@ -104,20 +107,18 @@ on xs
 	OR no sticky top nav, but add button to shoot back to top?
 	fix that .main scrolls on top of .sidebar
 	scale browser makes results disappear and never comes back
-fix facebook account for pinterest
 
 
-hook up text input and checkboxes with submit button to render results instead of /load-puppies
-make sure search query clears and reloads when type in a new term
-get pinterest working
-get 500px working again
+make sure search query and selected sources clears and reloads when type in a new term
 authentication doesnt work on iphone/github
 make sure all have limits and loops and error handling
 more results button in results container or infinite scroll
 add infinite scroll for additional results
 add ability to search by type of result
 
-add flickr? add facebook?
+
+V2
+add flickr, facebook, pinterest
 add functionality to share result to
 	Facebook
 	Instagram
