--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<label for="youtube">YouTube</label>
 					</div>
 				</fieldset>
-				<input type="submit" class="button" value="Puppies, please!">
+				<input type="submit" class="button" value="Puppies, please!" disabled>
 			</nav>
 		</div>
 	</section>
