--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
 </html>
 
 <!-- 
-loading message?
 add img, vid, gif buttons (icon + text) in button bar for types of results
 add social media icons for sources
 on xs
@@ -109,10 +108,9 @@ on xs
 	scale browser makes results disappear and never comes back
 
 
-make sure search query and selected sources clears and reloads when type in a new term
 authentication doesnt work on iphone/github
-make sure all have limits and loops and error handling
-more results button in results container or infinite scroll
+chasing tail gif, optimize timing between loading.gif+results
+load more puppies / results button in results container or infinite scroll
 add infinite scroll for additional results
 add ability to search by type of result
 
