--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 				<div class="grid-sizer"></div>
 				<div class="gutter-sizer"></div>
 			</div>
+			<input type="button" class="button" value="More puppies, please!">
 		</div>
 	</section>
 	<script
@@ -111,6 +112,7 @@ on xs
 authentication doesnt work on iphone/github
 chasing tail gif, optimize timing between loading.gif+results
 load more puppies / results button in results container or infinite scroll
+	- load more error handling in case run out of results
 add infinite scroll for additional results
 add ability to search by type of result
 
