--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ on xs
 	scale browser makes results disappear and never comes back
 
 
+fix imgur wtf
 authentication doesnt work on iphone/github
 chasing tail gif, optimize timing between loading.gif+results
 load more puppies / results button in results container or infinite scroll
