--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
 		var oAuthMethods = {};
 	</script>
 	<script src="masonry.pkgd.min.js"></script>
-	<script src="infinite-scroll.pkgd.min.js"></script>
 	<script src="sites/fivehundredpx.js"></script>
 	<script src="sites/giphy.js"></script>
 	<script src="sites/imgur.js"></script>
 	<script src="sites/instagram.js"></script>
-	<!-- <script src="sites/pinterest.js"></script> -->
 	<script src="sites/tumblr.js"></script>
 	<script src="sites/youtube.js"></script>
 </head>
@@ -31,21 +29,6 @@
 						<input type="text" placeholder="pitbull">
 					</div>
 				</fieldset>
-				<!-- <fieldset>
-					<legend>types</legend>
-					<div class="result-type">
-						<input type="checkbox" name="gifs" id="gifs" title="gifs" />
-						<label for="gifs">gifs</label>
-					</div>
-					<div class="result-type">
-						<input type="checkbox" name="images" id="images" title="images" />
-						<label for="images">images</label>
-					</div>
-					<div class="result-type">
-						<input type="checkbox" name="videos" id="videos" title="videos" />
-						<label for="videos">videos</label>
-					</div>
-				</fieldset> -->
 				<fieldset>
 					<div>
 						<input type="checkbox" name="fivehundredpx" id="fivehundredpx" title="fivehundredpx" />
@@ -63,12 +46,6 @@
 						<input type="checkbox" name="instagram" id="instagram" title="instagram" />
 						<label for="instagram">Instagram</label>
 					</div>
-					<!-- 
-					<div>
-						<input type="checkbox" name="pinterest" id="pinterest" title="pinterest" />
-						<label for="pinterest">Pinterest</label>
-					</div>
-					-->
 					<div>
 						<input type="checkbox" name="tumblr" id="tumblr" title="tumblr" />
 						<label for="tumblr">Tumblr</label>
@@ -88,7 +65,7 @@
 				<div class="grid-sizer"></div>
 				<div class="gutter-sizer"></div>
 			</div>
-			<input type="button" class="button" value="More puppies, please!">
+			<!-- <input type="button" class="button" value="More puppies, please!"> -->
 		</div>
 	</section>
 	<script
